[tool.poetry]
name = "SPECFEMPP_EXAMPLES"
version = "0.1.0"
description = ""
authors = ["Rohit Kakodkar <kakodkar.rohit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
snakemake = "^8.14.0"
obspy = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
