
CMAKE_MINIMUM_REQUIRED(VERSION 3.17.5)

get_filename_component(CURRENT_DIR_NAME "${CMAKE_CURRENT_SOURCE_DIR}" NAME)


if (NOT DEFINED EXAMPLE_INSTALL_DIR)
    set(EXAMPLE_INSTALL_DIR ./install)
endif()

set(CURRENT_EXAMPLE_INSTALL_DIR "${EXAMPLE_INSTALL_DIR}/${CURRENT_DIR_NAME}")


configure_file(CMakeFiles/Par_File.in ${CMAKE_CURRENT_BINARY_DIR}/Par_File)
configure_file(CMakeFiles/specfem_config.yaml.in ${CMAKE_CURRENT_BINARY_DIR}/specfem_config.yaml)


install(
  FILES
    ${CMAKE_CURRENT_BINARY_DIR}/Par_File
    ${CMAKE_CURRENT_BINARY_DIR}/specfem_config.yaml
    ${CMAKE_CURRENT_SOURCE_DIR}/Snakefile
    ${CMAKE_CURRENT_SOURCE_DIR}/source.yaml
    ${CMAKE_CURRENT_SOURCE_DIR}/README.md
    ${CMAKE_CURRENT_SOURCE_DIR}/STATIONS
    ${CMAKE_CURRENT_SOURCE_DIR}/topography.dat
  DESTINATION ${EXAMPLE_INSTALL_DIR}/${CURRENT_DIR_NAME}
)
